2004-07-02  Thomas Vander Stichele  <thomas at apestaart dot org>

	* testsuite/cleanup/cleanup1.c: (create_pipeline):
	* testsuite/cleanup/cleanup2.c: (create_pipeline):
	* testsuite/cleanup/cleanup4.c: (main):
	  fix testsuite

2004-07-02  Thomas Vander Stichele  <thomas at apestaart dot org>

	* libs/gst/control/control.c:
	* libs/gst/control/dparam.c:
	* libs/gst/control/dparam_smooth.c: (gst_dpsmooth_get_type):
	* libs/gst/control/dparammanager.c:
	* libs/gst/control/dparammanager.h:
	* testsuite/dynparams/Makefile.am:
	* testsuite/dynparams/dparamstest.c: (gst_dptest_base_init),
	(gst_dptest_change_state), (gst_dptest_chain), (main):
	  fix testcase for dparams
	  add debugging category

2004-07-02  Thomas Vander Stichele  <thomas at apestaart dot org>

	* testsuite/Rules:
	  change path

2004-07-02  Benjamin Otte  <otte@gnome.org>

	* tests/.cvsignore:
	* tests/Makefile.am:
	* tests/mass_elements.c: (gst_get_current_time), (main):
	  add simple benchmark to test various speeds of fakesrc ! identity !
	  identity ! ... ! fakesink.
	  Usage: mass_elements [num_identities] [num_buffers]
	  If not specified they default to 1000.

2004-07-02  Benjamin Otte  <otte@gnome.org>

	* gst/gstpad.c: (gst_pad_check_schedulers),
	(gst_pad_can_link_filtered), (gst_pad_link_filtered),
	(gst_pad_link_prepare):
	  check that pads that get linked belong to the same manager. The old
	  code allowed linking elements before putting them into bins, so it
	  worked to link them and then put them in different threads, which
	  lead to weird behaviour.
	  Since this effectively disallows linking elements before putting
	  them in a bin, some applications might not work after this and error
	  out. If these applications are too critical, we might need to revert
	  that patch. Please test this before the next release...

2004-06-28  Benjamin Otte  <in7y118@public.uni-hamburg.de>

	* gst/gstpad.c: (gst_pad_get_caps):
	  throw an error if the getcaps function does not return a subset of